fix bug 572065 (as was last checkin) can't save or detach imap attachments, r=rkent, sr=neil